name:                singularity-surfer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DSHOII/singularity-surfer#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Hansen
maintainer:          jonathan.shh@gmail.com
copyright:           2017 Jonathan Hansen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Config, Graphics, Input, Types, Update, Utils
  build-depends:       base >= 4.7 && < 5,
                       Yampa,
                       GLUT
  default-language:    Haskell2010

executable singularity-surfer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       Yampa,
                       GLUT
                     , singularity-surfer
  default-language:    Haskell2010

test-suite singularity-surfer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , singularity-surfer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DSHOII/singularity-surfer
